--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -2,7 +2,7 @@
 title: Overview
 ---
 
-## What is tach?
+## What is Tach?
 
 Tach allows you to control dependencies between your Python modules.
 Modules can also define an explicit public interface to prevent deep coupling.
