--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -30,4 +30,5 @@ Tach is:
 - [`tach sync`](usage/commands#tach-sync) - Sync constraints with the actual dependencies in your project.
 - [`tach show`](usage/commands#tach-show) - Visualize your project's dependency graph.
 - [`tach report`](usage/commands#tach-report) - Generate a dependency report for a file or module.
+- [`tach test`](usage/#tach-test) - Run only the tests impacted by your changes
 - [`tach install`](usage/commands#tach-install) - Install Tach into your development workflow (e.g. pre-commit)
