--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -15,6 +15,7 @@ This is the project-level configuration file which should be in the root of your
 `ignore_type_checking_imports` is a boolean which, when enabled, silences `tach check` failures caused by imports under a `TYPE_CHECKING` conditional block
 
 ```yaml
+# yaml-language-server: $schema=https://raw.githubusercontent.com/gauge-sh/tach/v0.6.8/public/tach-yml-schema.json
 modules:
   - path: tach
     depends_on: []
