--- a/docs/getting-started/why-tach.mdx
+++ b/docs/getting-started/why-tach.mdx
@@ -20,9 +20,9 @@ Attempts we've seen to fix this problem always came up short. A patchwork of sol
 
 With Tach, you can:
 
-1. Declare your modules ([`tach mod`](usage/commands#tach-mod))
-2. Automatically declare dependencies ([`tach sync`](usage/commands#tach-sync))
-3. Enforce those dependencies ([`tach check`](usage/commands#tach-check))
-4. Visualize those dependencies ([`tach show`](usage/commands#tach-show) and [`tach report`](usage/commands#tach-report))
+1. Declare your modules ([`tach mod`](../usage/commands#tach-mod))
+2. Automatically declare dependencies ([`tach sync`](../usage/commands#tach-sync))
+3. Enforce those dependencies ([`tach check`](../usage/commands#tach-check))
+4. Visualize those dependencies ([`tach show`](../usage/commands#tach-show) and [`tach report`](../usage/commands#tach-report))
 
-You can also enforce a [strict interface](usage/strict-mode) for each module. This means that only members that are listed in `__all__` can be imported by other modules.
+You can also enforce a [strict interface](../usage/strict-mode) for each module. This means that only members that are listed in `__all__` can be imported by other modules.
