--- a/docs/usage/commands.mdx
+++ b/docs/usage/commands.mdx
@@ -24,12 +24,12 @@ Running `tach mod` will open an editor in your terminal where you can mark your 
 You can navigate with the arrow keys, mark individual modules with `Enter`, and mark all siblings
 as modules with `Ctrl + a`.
 
-You can also mark your Python [source root](usage/configuration#source-root) by pressing `s`.
+You can also mark your Python [source root](configuration#source-root) by pressing `s`.
 This allows Tach to understand module paths and correctly identify first-party imports.
 
 To save your modules, use `Ctrl + s`. Otherwise, to exit without saving, use `Ctrl + c`.
 
-Any time you make changes with `tach mod`, run [`tach sync`](usage/commands#tach-sync)
+Any time you make changes with `tach mod`, run [`tach sync`](commands#tach-sync)
 to automatically configure dependency rules.
 
 ## tach sync
