--- a/docs/usage/strict-mode.mdx
+++ b/docs/usage/strict-mode.mdx
@@ -2,7 +2,7 @@
 title: Strict Mode
 ---
 
-A module can enable 'strict mode' by setting `strict: true` in its configuration within [`tach.yml`](usage/configuration#tachyml).
+A module can enable 'strict mode' by setting `strict: true` in its configuration within [`tach.yml`](configuration#tachyml).
 
 ## How does it work?
 
