--- a/docs/getting-started/getting-started.mdx
+++ b/docs/getting-started/getting-started.mdx
@@ -22,7 +22,7 @@ You can do this interactively - run:
 
 Mark each module boundary with 'Enter'. You can mark all of your top-level Python source packages, or just a few which you want to isolate.
 
-If your Python code lives below your project root, mark your Python [source root](https://gauge-sh.github.io/tach/configuration#source-root) using the 's' key.
+If your Python code lives below your project root, mark your Python [source root](../usage/configuration#source-root) using the 's' key.
 
 This will create the config file for your project, `tach.yml`.
 
@@ -69,7 +69,7 @@ Give both a try and run `tach check` again. This will generate an error:
 
 Each error indicates an import which violates your dependencies. If your terminal supports hyperlinks, click on the file path to go directly to the error.
 
-`tach check` will also return an error code. It can be easily integrated with CI/CD, [Pre-commit hooks](https://gauge-sh.github.io/tach/usage/#tach-install), and [VS Code](https://marketplace.visualstudio.com/items?itemName=Gauge.tach), and more!
+`tach check` will also return an error code. It can be easily integrated with CI/CD, [Pre-commit hooks](../usage/commands#tach-install), and [VS Code](https://marketplace.visualstudio.com/items?itemName=Gauge.tach), and more!
 
 ### Extras
 
@@ -110,7 +110,7 @@ python/tach/cache/setup.py[L7]: Import 'tach.filesystem.find_project_config_root
 
 Tach also supports:
 
-- [Manual file configuration](https://gauge-sh.github.io/tach/configuration/)
-- [Strict public interfaces for modules](https://gauge-sh.github.io/tach/strict-mode/)
-- [Inline exceptions](https://gauge-sh.github.io/tach/tach-ignore/)
-- [Pre-commit hooks](https://gauge-sh.github.io/tach/usage/#tach-install)
+- [Manual file configuration](../usage/configuration)
+- [Strict public interfaces for modules](../usage/strict-mode)
+- [Inline exceptions](../usage/tach-ignore)
+- [Pre-commit hooks](../usage/command#tach-install)
