--- a/docs/contributing/setting-up-project.mdx
+++ b/docs/contributing/setting-up-project.mdx
@@ -74,5 +74,6 @@ Find Beginner Friendly issues here:
 - [Documentation Issues](https://github.com/gauge-sh/tach/issues?q=is%3Aopen+is%3Aissue+label%3Adocumentation)
 - [Issues](https://github.com/gauge-sh/tach/issues)
 - [Documentation](https://github.com/gauge-sh/tach/tree/main/docs)
-- For any queries, just drop a message on our discord channel : [Join our Discord Channel](https://discord.com/invite/a58vW8dnmw)
+
+For any questions, just drop a message in [Discord](https://discord.com/invite/a58vW8dnmw)
 
