--- a/docs/usage/commands.mdx
+++ b/docs/usage/commands.mdx
@@ -75,8 +75,8 @@ options:
 An error will indicate:
 
 - the file path in which the error was detected
-- the tag associated with that file
-- the tag associated with the attempted import
+- the path associated with that file
+- the path associated with the attempted import
 
 If `--exact` is provided, additional errors will be raised if a dependency exists in `tach.yml` that does not exist in the code.
 
