--- a/docs/getting-started/getting-started.mdx
+++ b/docs/getting-started/getting-started.mdx
@@ -76,7 +76,7 @@ Each error indicates an import which violates your dependencies. If your termina
 Visualize your dependency graph.
 
 ```bash
-tach show
+tach show [--web]
 ```
 
 Tach will generate a graph of your dependencies. Here's what this looks like for Tach:
@@ -114,5 +114,6 @@ Tach also supports:
 
 - [Manual file configuration](../usage/configuration)
 - [Strict public interfaces for modules](../usage/strict-mode)
+- [Deprecating individual dependencies](../usage/deprecate)
 - [Inline exceptions](../usage/tach-ignore)
 - [Pre-commit hooks](../usage/command#tach-install)
