--- a/docs/usage/caching.mdx
+++ b/docs/usage/caching.mdx
@@ -25,7 +25,7 @@ This is done to enable 'replaying' cached tasks so that their output can be reus
 Tach uses several pieces of information to determine cache hits:
 
 - Python interpreter version (`major.minor.micro`)
-- All Python file contents beneath the [source root](configuration#source-root)
+- All Python file contents beneath your [source roots](configuration#source-roots)
 - Declared versions of 3rd party dependencies in project requirements (`requirements.txt` or `pyproject.toml`)
 - File contents of explicitly configured [file dependencies](configuration#cache)
 - Explicitly configured [environment variable values](configuration#cache)
