--- a/docs/usage/commands.mdx
+++ b/docs/usage/commands.mdx
@@ -84,7 +84,7 @@ Example:
 
 ```bash
 > tach check
-❌ tach/check.py[L8]: Cannot import 'tach.filesystem'. Tag 'tach' cannot depend on 'tach.filesystem'.
+❌ tach/check.py[L8]: Cannot import 'tach.filesystem'. Module 'tach' cannot depend on 'tach.filesystem'.
 ```
 
 NOTE: If your terminal supports hyperlinks, you can click on the failing file path to go directly to the error.
