--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -42,6 +42,9 @@ cache:
     - src/*.rs
   env_dependencies:
     - DEBUG
+external:
+  exclude:
+    - pytest
 source_root: backend
 exact: true
 disable_logging: false
@@ -176,3 +179,10 @@ Tach allows configuration of the [computation cache](caching) it uses to speed u
 The `file_dependencies` key accepts a list of glob patterns to indicate additional file contents that should be considered when [checking for cache hits](caching#determining-cache-hits). This should typically include files outside of your [source roots](#source-roots) which affect your project's behavior under test, including the tests themselves. Additionally, if you have non-Python files which affect your project's behavior (such as Rust or C extensions), these should be included as well.
 
 The `env_dependencies` key accepts a list of environment variable names whose values affect your project's behavior under test. This may include a `DEBUG` flag, or database connection parameters in the case of tests which use a configurable database.
+
+
+## External Checks
+
+When running [`check-external`](commands#tach-check-external), Tach allows excluding certain modules from validation.
+
+Adding the top level module name to the `exclude` key will allow all usages of the corresponding module.
