More doc updates, update YML schema JSON

--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -185,4 +185,4 @@ The `env_dependencies` key accepts a list of environment variable names whose va
 
 When running [`check-external`](commands#tach-check-external), Tach allows excluding certain modules from validation.
 
-Adding the top level module name to the `exclude` key will allow all usages of the corresponding module.
+Adding the top level module name to the `exclude` key (underneath the `external` key) will allow all usages of the corresponding module.
