--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -10,7 +10,7 @@ This is the project-level configuration file which should be in the root of your
 
 `modules` defines the modules in your project, and accepts the keys described [below](#modules).
 
-`exclude` accepts a list of directory patterns to exclude from checking. These are treated as regex patterns which match from the beginning of a given file path. For example: `project/.*tests` would match any path beginning with `project/` and ending with `tests`.
+`exclude` accepts a list of directory patterns to exclude from checking. These are treated as glob paths which match from the beginning of a given file path. For example: `project/*.tests` would match any path beginning with `project/` and ending with `.tests`.
 
 `ignore_type_checking_imports` is a boolean which, when enabled, silences `tach check` failures caused by imports under a `TYPE_CHECKING` conditional block
 
