--- a/docs/usage/faq.mdx
+++ b/docs/usage/faq.mdx
@@ -5,19 +5,19 @@ title: FAQ
 ### How does it work?
 
 Tach works by analyzing the imports in your Python modules.
-When you define dependencies in your project-level `tach.yml`, running `tach check` will verify that the imports in your modules match your expected dependencies.
+When you define dependencies in your project-level `tach.toml`, running `tach check` will verify that the imports in your modules match your expected dependencies.
 
 ### What is a module?
 
-A 'module' is a Python module with dependencies configured in `tach.yml`. A module can be a python file or a directory with an `__init__.py`.
-The module is identified by its import path from your project root (e.g. `a.b` for `<root>/a/b.py`),
+A 'module' is a Python module with dependencies configured in `tach.toml`. A module can be a python file or a directory.
+The module is identified by its import path from the nearest source root (e.g. `a.b` for `<root>/a/b.py`),
 and its dependencies are listed in the `depends_on` key containing module paths in the same format.
 
 ### Are conditional imports checked?
 
 Tach will check all imports in your source files, including those which are called conditionally.
 The only exceptions are imports made within `TYPE_CHECKING` conditional blocks. If you want to disable checks for
-these imports, you can add `ignore_type_checking_imports: true` to your `tach.yml`.
+these imports, you can add `ignore_type_checking_imports: true` to your `tach.toml`.
 
 ### Can you catch dynamic references?
 
@@ -40,4 +40,4 @@ Do not report security vulnerabilities through public GitHub issues. Instead, pl
 ### What information does Tach track?
 
 Tach tracks anonymized usage and error report statistics; we ascribe to Posthog's approach as detailed [here](https://posthog.com/blog/open-source-telemetry-ethical).
-If you would like to opt out of sending anonymized info, you can set `disable_logging` to `true` in your `tach.yml`.
+If you would like to opt out of sending anonymized info, you can set `disable_logging` to `true` in your `tach.toml`.
