--- a/docs/usage/configuration.mdx
+++ b/docs/usage/configuration.mdx
@@ -46,8 +46,9 @@ depends_on = [{ path = "tach.start" }]
 strict = true
 
 [[modules]]
-path = "tach.cache"
+path = "tach.parsing"
 depends_on = [{ path = "tach" }, { path = "tach.filesystem" }]
+visibility = ["tach.check"]
 strict = true
 
 [[modules]]
@@ -74,7 +75,8 @@ exclude = ["pytest"]
 Each module listed under the `modules` key above can accept the following attributes:
 
 - `path`: the Python import path to the module (e.g. `a.b` for `<root>/a/b.py`)
-- `depends_on`: a list of the other modules which the module is allowed to import from, using their 'paths' to identify them
+- `depends_on`: a list of the other modules which this module can import from (default: `[]`)
+- `visibility`: a list of other modules which can import from this module (default: `['*']`)
 - `strict`: enables [strict mode](strict-mode) for the module
 
 Tach also supports [deprecating individual dependencies](../usage/deprecate).
@@ -123,7 +125,6 @@ source_roots = ["backend"]
 ```
 
 in your `tach.toml`, or use [`tach mod`](commands#tach-mod) and mark the `backend` folder as the only source root.
-
 
 ### Example: Monorepo
 
@@ -196,7 +197,6 @@ Tach allows configuration of the [computation cache](caching) it uses to speed u
 The `file_dependencies` key accepts a list of glob patterns to indicate additional file contents that should be considered when [checking for cache hits](caching#determining-cache-hits). This should typically include files outside of your [source roots](#source-roots) which affect your project's behavior under test, including the tests themselves. Additionally, if you have non-Python files which affect your project's behavior (such as Rust or C extensions), these should be included as well.
 
 The `env_dependencies` key accepts a list of environment variable names whose values affect your project's behavior under test. This may include a `DEBUG` flag, or database connection parameters in the case of tests which use a configurable database.
-
 
 ## External Checks
 
